<resources>
    <string name="app_name">Phil\'s Sampler</string>
    <string name="sampler_api_key">AIzaSyCEZ_dZVGvaz0ERkZsiBh_rJd3C7Pq2ONg</string>
    <string name="nav_header_title">Phil\'s Sampler</string>
    <string name="nav_header_subtitle">phil@philipyoung.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_print">Print Calendar</string>
    <string name="nav_rotate">Rotate</string>
    <string name="nav_photo">Take Photo</string>
    <string name="nav_list">List View</string>
    <string name="nav_grid">Grid View</string>
    <string name="nav_internet">Connect to Internet</string>
    <string name="nav_api">RESTful API</string>
    <string name="nav_json">JSON</string>
    <string name="nav_xml">XML</string>
    <string name="nav_dialog">Custom Dialog Box</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_encryption">Encryption</string>
    <string name="nav_eula">EULA</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_about">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_logoff">Sign Out</string>
    <string name="nav_login">Sign In</string>
    <string name="nav_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="blank_space" />
    <string name="sample_short_text">sample short text</string>
    <string name="sample_long_text">sample long text that goes on and on and on and \nhas a carriage return</string>
    <string name="splash_text">Phil\'s Sampler</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dashboard_remark_text">
        "This app is a sampler of some of my favourite tips and tricks that I have learned for Android."
        "\n\nSome of the cleverer things that I have done are proprietary to my clients and I may not share in my portfolio."
        "\n\nClick on the menu to the left to select a demo."
    </string>
    <string name="navigation_drawer_communicate">Communicate</string>
    <string name="rotate_hint_1">Enter some text</string>
    <string name="rotate_hint_2">in each of these fields</string>
    <string name="rotate_hint_3">then rotate the screen</string>
    <string name="rotate_checkbox_text">Remember inputs</string>
    <string name="print_2018_calendar">Print 2018 Calendar</string>
    <string name="print_2019_calendar">Print 2019 Calendar</string>
    <string name="print_annual_calendar">Print %1$tY Calendar</string>
    <string name="title_activity_documentation">Documentation</string>
    <string name="title_activity_eula">EULA</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_encryption">Encryption</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="documentation_about_html">
        "&lt;p&gt;This app is a sampler of some of my favourite tips and tricks that I have learned for Android.&lt;/p&gt;"
        "&lt;p&gt;Some of the cleverer things that I have done are proprietary to my clients and I may not share in my portfolio.&lt;/p&gt;"
        "&lt;p&gt;Click on the main menu at the top left to select a demo.&lt;/p&gt;"
    </string>
    <string name="documentation_help_html">
        "&lt;h3&gt;&lt;img src='ic_menu_camera' /&gt; Take Photo&lt;/h3&gt;"
        ""
        "&lt;p&gt;If you wanted to document your stuff, you would take a photo with the camera and add a heading and detailed description. This app is just a demo and does not save your stuff to a database. Visit JCY Creative Studio on Google Play for my useful uses of this feature.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_rotate' /&gt; Rotate&lt;/h3&gt;"
        ""
        "&lt;p&gt;Enter text and rotate the screen.  One of the fundamental features in Android programming is managing what happens when the user rotates the screen.  &lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_list' /&gt; List View&lt;/h3&gt;"
        ""
        "&lt;p&gt;Demonstrate how to display data in a list.  I provide an image, a heading, two short descriptions, and a long description.  Once selected, the menu item switches to Grid View.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_grid' /&gt; Grid View&lt;/h3&gt;"
        ""
        "&lt;p&gt;After the user selects List View, the menu item switches to Grid View.  This will display similar data that was in List View, except that the only the image and the heading are displayed.  Once selected, the menu item switches back to List View.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_print' /&gt; Print Calendar&lt;/h3&gt;"
        ""
        "&lt;p&gt;The screen displays two buttons, one for this year, the other for next year.  Selecting either button will build a report that can be printed.  Change the size of the paper to see how the program reacts, respaces the gaps between the months, and adds or removes pages as necessary.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_api' /&gt; RESTful API&lt;/h3&gt;"
        ""
        "&lt;p&gt;The screen takes your position, displays it in the GPS fields, and requests a Google map.  When the request is fulfilled, the map updates and the address is displayed in the description field.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_encryption' /&gt; Encryption&lt;/h3&gt;"
        ""
        "&lt;p&gt;This demonstrates encryption and decription using Advanced Encryption System (AES).  Enter up to sixteen (16) characters in the key field. As long as less than sixteen characters are in this field, random characters (salt) are added to the key to fill the gap. Then enter as long a message as you want in the message field. As you type, the message is encrypted and the encrypted text is displayed.  If you want, you could copy the text and take it to your favourite hacker site to try to decrypt it. The encrypted message is decripted in the decrypted message field.&lt;/p&gt;"
        "&lt;h3&gt;&lt;img src='ic_menu_notification' /&gt; Notifications&lt;/h3&gt;"
        ""
        "&lt;p&gt;This demonstates notifications in Android.  Select when and how often you want Android to send you notifications about this app. Also, select which page you wish to see upon returning to the app. You can even close the app and the notifications will still keep coming. To turn off notifications, select stop.&lt;/p&gt;"
    </string>
    <string name="documentation_eula_html">
        "&lt;p&gt;This app is a sampler of some of my favourite tips and tricks that I have learned for Android.&lt;/p&gt;"
        "&lt;p&gt;Some of the cleverer things that I have done are proprietary to my clients and I may not share in my portfolio.&lt;/p&gt;"
        "&lt;p&gt;Click on the main menu at the top left to select a demo.&lt;/p&gt;"
    </string>
    <string name="documentation_privacy_html">
        "&lt;p&gt;This app is a sampler of some of my favourite tips and tricks that I have learned for Android.&lt;/p&gt;"
        "&lt;p&gt;Some of the cleverer things that I have done are proprietary to my clients and I may not share in my portfolio.&lt;/p&gt;"
        "&lt;p&gt;Click on the main menu at the top left to select a demo.&lt;/p&gt;"
    </string>
    <string name="encryption_text_clear">Enter sample text</string>
    <string name="encryption_text_code">Enter a 16 letter and number encryption code</string>
    <string name="encryption_hint_code">16 letters and numbers</string>
    <string name="encryption_text_encrypted">Encrypted text</string>
    <string name="encryption_text_decrypt_code">Salted decryption code</string>
    <string name="encryption_hint_decrypt_code">Decryption code</string>
    <string name="encryption_text_decrypted">Decrypted text</string>
    <string name="notification_next_text">Select when to get next notification</string>
    <string name="notification_frequency_text">Select frequency to get notification</string>
    <string name="notification_choose_demo">Select demo to display on notification</string>
</resources>