<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/rotate_text1"
        android:layout_width="@dimen/rotate_input_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/rotate_hint_1" />

    <EditText
        android:id="@+id/rotate_text2"
        android:layout_width="@dimen/rotate_input_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/rotate_hint_2" />

    <EditText
        android:id="@+id/rotate_text3"
        android:layout_width="@dimen/rotate_input_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/rotate_hint_3" />

    <CheckBox
        android:id="@+id/rotate_checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/rotate_checkbox_text"/>

</LinearLayout>